discussion/kv_engine/188500/188500_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Add Throttling.md

Change-Id: I13596eec172b56bca743815e5f298c55131bc562

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-23 13:34:03.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-23 15:42:54.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52529/ : FAILURE

Failure of GoogleTest "MiscTest.TestDefaultThrottleLimit":

<pre>
[ RUN      ] MiscTest.TestDefaultThrottleLimit
unknown file: error: C++ exception with description "[json.exception.type_error.302] type must be number, but is string" thrown in the test body.
[  FAILED  ] MiscTest.TestDefaultThrottleLimit (101 ms)
MiscTest.TestDefaultThrottleLimit
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52529/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23059/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/serverless/config.h:20:14: error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
        std::numeric_limits<std::size_t>::max();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/serverless/config.h:20:40: error: expected "(" for function-style cast or type construction [clang-diagnostic-error]
        std::numeric_limits<std::size_t>::max();
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/serverless/config.h:20:43: error: no member named "max" in the global namespace [clang-diagnostic-error]
        std::numeric_limits<std::size_t>::max();
                                          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23059/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/serverless/config.h:20:14:
error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23059/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33541/ : FAILURE

Failure of GoogleTest "MiscTest.TestDefaultThrottleLimit":

<pre>
[ RUN      ] MiscTest.TestDefaultThrottleLimit
[2023-03-23T14:50:13.584Z] unknown file: Failure
[2023-03-23T14:50:13.584Z] C++ exception with description "[json.exception.type_error.302] type must be number, but is string" thrown in the test body.
[2023-03-23T14:50:13.584Z] [  FAILED  ] MiscTest.TestDefaultThrottleLimit (302 ms)
MiscTest.TestDefaultThrottleLimit
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33541/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12872/ : FAILURE

Failure of GoogleTest "MiscTest.TestDefaultThrottleLimit":

<pre>
[ RUN      ] MiscTest.TestDefaultThrottleLimit
[2023-03-23T13:50:02.284Z] unknown file: Failure
[2023-03-23T13:50:02.284Z] C++ exception with description "[json.exception.type_error.302] type must be number, but is string" thrown in the test body.
[2023-03-23T13:50:02.284Z] [  FAILED  ] MiscTest.TestDefaultThrottleLimit (30 ms)
MiscTest.TestDefaultThrottleLimit
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12872/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1867/ : FAILURE

Failure of GoogleTest "MiscTest.TestDefaultThrottleLimit":

<pre>
[ RUN      ] MiscTest.TestDefaultThrottleLimit
[2023-03-23T14:34:49.712Z] unknown file: Failure
[2023-03-23T14:34:49.712Z] C++ exception with description "[json.exception.type_error.302] type must be number, but is string" thrown in the test body.
[2023-03-23T14:34:49.712Z] [  FAILED  ] MiscTest.TestDefaultThrottleLimit (206 ms)
MiscTest.TestDefaultThrottleLimit
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1867/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26442/ : FAILURE

Failure of GoogleTest "MiscTest.TestDefaultThrottleLimit":

<pre>
[ RUN      ] MiscTest.TestDefaultThrottleLimit
[2023-03-23T14:56:48.446Z] unknown file: Failure
[2023-03-23T14:56:48.446Z] C++ exception with description "[json.exception.type_error.302] type must be number, but is string" thrown in the test body.
[2023-03-23T14:56:48.446Z] [  FAILED  ] MiscTest.TestDefaultThrottleLimit (5086 ms)
MiscTest.TestDefaultThrottleLimit
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26442/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25127/ : FAILURE

Failure of GoogleTest "MiscTest.TestDefaultThrottleLimit":

<pre>
[ RUN      ] MiscTest.TestDefaultThrottleLimit
[2023-03-23T14:38:27.419Z] unknown file: Failure
[2023-03-23T14:38:27.419Z] C++ exception with description "[json.exception.type_error.302] type must be number, but is string" thrown in the test body.
[2023-03-23T14:38:27.419Z] [  FAILED  ] MiscTest.TestDefaultThrottleLimit (116 ms)
MiscTest.TestDefaultThrottleLimit
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25127/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24716/ : FAILURE

Failure of GoogleTest "MiscTest.TestDefaultThrottleLimit":

<pre>
[ RUN      ] MiscTest.TestDefaultThrottleLimit
[2023-03-23T15:32:38.220Z] unknown file: Failure
[2023-03-23T15:32:38.220Z] C++ exception with description "[json.exception.type_error.302] type must be number, but is string" thrown in the test body.
[2023-03-23T15:32:38.220Z] [  FAILED  ] MiscTest.TestDefaultThrottleLimit (98 ms)
MiscTest.TestDefaultThrottleLimit
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24716/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25590/ : FAILURE

Failure of GoogleTest "MiscTest.TestDefaultThrottleLimit":

<pre>
[ RUN      ] MiscTest.TestDefaultThrottleLimit
[2023-03-23T14:45:54.977Z] unknown file: Failure
[2023-03-23T14:45:54.977Z] C++ exception with description "[json.exception.type_error.302] type must be number, but is string" thrown in the test body.
[2023-03-23T14:45:54.977Z] [  FAILED  ] MiscTest.TestDefaultThrottleLimit (121 ms)
MiscTest.TestDefaultThrottleLimit
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25590/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23340/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44068/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12791/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
